versions/v3.6.0/doxygen/html/globals_v.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/globals_v.html
original_path: doxygen/html/globals_v.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all functions, variables, defines, enums, and typedefs with links to the files they belong to:

### - v -

- VA\_STACK\_ALIGN : [cbprintf\_internal.h](cbprintf__internal_8h.md#acfc4e20989d254f61e85b8e2e5e6701a)
- VA\_STACK\_MIN\_ALIGN : [cbprintf\_internal.h](cbprintf__internal_8h.md#a0ec36f3c06add6c091c8f552ef3736e1)
- vaddr\_t : [addr\_types.h](addr__types_8h.md#a96329c9b2410bdd79046e2529238a30f)
- VBAR\_MASK : [cpu.h](include_2zephyr_2arch_2arm_2cortex__a__r_2cpu_8h.md#a2d4fcd4a7bb1c87080f5795d0f531703)
- VCMP\_CHANNEL\_0 : [it8xxx2\_vcmp.h](dt-bindings_2sensor_2it8xxx2__vcmp_8h.md#a04c6b4af3a7fa2c266f9bc4cf8f580f8)
- VCMP\_CHANNEL\_1 : [it8xxx2\_vcmp.h](dt-bindings_2sensor_2it8xxx2__vcmp_8h.md#ab284eddb8412223f865380f69311884c)
- VCMP\_CHANNEL\_2 : [it8xxx2\_vcmp.h](dt-bindings_2sensor_2it8xxx2__vcmp_8h.md#abf666272da5df739c38349f8dc0673d7)
- VCMP\_CHANNEL\_3 : [it8xxx2\_vcmp.h](dt-bindings_2sensor_2it8xxx2__vcmp_8h.md#aad5d65c9659dedf702b54d8a7d3857ea)
- VCMP\_CHANNEL\_4 : [it8xxx2\_vcmp.h](dt-bindings_2sensor_2it8xxx2__vcmp_8h.md#a3148e4a63af5791c0d88e3ede54c1443)
- VCMP\_CHANNEL\_5 : [it8xxx2\_vcmp.h](dt-bindings_2sensor_2it8xxx2__vcmp_8h.md#a1460631599e37050e844032297578d2c)
- VCMP\_CHANNEL\_CNT : [it8xxx2\_vcmp.h](dt-bindings_2sensor_2it8xxx2__vcmp_8h.md#ad7d3ef8e2a0157c43c68ef12f02b6181)
- VCMPO\_P0 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#af73c0cefc9dcb548664882050a0316b8)
- VCMPO\_P1 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a30f453f721382fa84e37a82dc56a5071)
- VCMPO\_P2 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a311cd1025e9151407e913334a660ec18)
- VCMPO\_P22 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a111f3f328e433b185b9dae30cb8256e5)
- VCMPO\_P23 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#af329d82835e17e9ffe85e05cdbd54699)
- VCMPO\_P26 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a28e401ddafb5476b147d6407270dbdb7)
- VCMPO\_P28 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a019a0aefc6fc837b16f6b1065a4e430f)
- VCMPO\_P29 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a671f7038ce6c70083ec9d090c0ac350c)
- VCMPO\_P30 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a520ad3a45e554a5ababd0d35a5e040a1)
- VCMPO\_P31 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ab11c6316bb1fda43f3bb74e458b49fbe)
- VCMPO\_P34 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a176c774836a2534c644c9f9c9a1237e2)
- VCMPO\_P35 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#abf1ef5958d413bc7fe7749164f48a756)
- VCMPO\_P44 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a663ea6c000c8498e9895b7c0611137de)
- VCMPO\_P52 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a97689e19a50cef3cb32294b79bc9313f)
- VCMPO\_P57 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a34e60567a7201133b0c4df3cc52f2e2a)
- VCMPO\_P72 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#af7e3a29ea173aad99e2547fd40411324)
- VCMPO\_P90 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a26e9b386464a6b9c2ea98a7ac26749ba)
- VCMPO\_P91 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#af3019c7b40a96a23cddc36a872fa42a1)
- VCMPO\_P92 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a7123f95d9a3d4eeddb7f594b03bb0d46)
- VCMPO\_P93 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a652adf8b14771e0be22a92e18c0eff7b)
- VCMPO\_P94 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a440777738e6ccc6712dcb2cb1eebcbe5)
- vcpu\_info\_t : [xen.h](xen_8h.md#a5d85cc76b763cb919c5c7d0e91d66d9f)
- vcpu\_time\_info\_t : [xen.h](xen_8h.md#a46b8329725a49204352d786ce96d8b85)
- veml7700\_als\_gain : [veml7700.h](veml7700_8h.md#ad4a2d50801f3f4d2e1390e6c5dac565d)
- VEML7700\_ALS\_GAIN\_1 : [veml7700.h](veml7700_8h.md#ad4a2d50801f3f4d2e1390e6c5dac565da32ee11119f685ae203e9c69e7246c722)
- VEML7700\_ALS\_GAIN\_1\_4 : [veml7700.h](veml7700_8h.md#ad4a2d50801f3f4d2e1390e6c5dac565da276d18739e9bfe76c5bf91750c051cfd)
- VEML7700\_ALS\_GAIN\_1\_8 : [veml7700.h](veml7700_8h.md#ad4a2d50801f3f4d2e1390e6c5dac565da9a675080f74e21da950bacd74d3880cb)
- VEML7700\_ALS\_GAIN\_2 : [veml7700.h](veml7700_8h.md#ad4a2d50801f3f4d2e1390e6c5dac565da8053068f9d24805ce24f4fcead41bac2)
- VEML7700\_ALS\_GAIN\_ELEM\_COUNT : [veml7700.h](veml7700_8h.md#ac67394dec210f9c64ae0f25bc24b2b4d)
- VEML7700\_ALS\_INT\_HIGH\_MASK : [veml7700.h](veml7700_8h.md#a4af944750098802779ef6d018ed1aa7b)
- VEML7700\_ALS\_INT\_LOW\_MASK : [veml7700.h](veml7700_8h.md#a69af2a92e4e816f269d98e86ffe522b8)
- veml7700\_als\_it : [veml7700.h](veml7700_8h.md#a0a65ceba1f3f7b25309033a8e6c3384b)
- VEML7700\_ALS\_IT\_100 : [veml7700.h](veml7700_8h.md#a0a65ceba1f3f7b25309033a8e6c3384ba297e6e0e46f719b15e235bdaf312c27c)
- VEML7700\_ALS\_IT\_200 : [veml7700.h](veml7700_8h.md#a0a65ceba1f3f7b25309033a8e6c3384bae52d52519dd988fd096a7e27470d8f65)
- VEML7700\_ALS\_IT\_25 : [veml7700.h](veml7700_8h.md#a0a65ceba1f3f7b25309033a8e6c3384ba59491f48a2563a32c23d87608a5c289a)
- VEML7700\_ALS\_IT\_400 : [veml7700.h](veml7700_8h.md#a0a65ceba1f3f7b25309033a8e6c3384ba7a1da11c0773ef10cd2f0302c2bf0f7a)
- VEML7700\_ALS\_IT\_50 : [veml7700.h](veml7700_8h.md#a0a65ceba1f3f7b25309033a8e6c3384baf7677738fb31f8b76f374ddcb8529c55)
- VEML7700\_ALS\_IT\_800 : [veml7700.h](veml7700_8h.md#a0a65ceba1f3f7b25309033a8e6c3384ba8e8c54868774a5bd634b6deba30256c2)
- VEML7700\_ALS\_IT\_ELEM\_COUNT : [veml7700.h](veml7700_8h.md#ab3f2271ebacc28dc6b846f696a26e9c0)
- VEML7700\_ALS\_PERS\_1 : [veml7700.h](veml7700_8h.md#a1f84fa22aa00479b23ada96982aa0146a111482232b5fa120313fe9f3beae0f59)
- VEML7700\_ALS\_PERS\_2 : [veml7700.h](veml7700_8h.md#a1f84fa22aa00479b23ada96982aa0146aed9dbc590b13588f802335329b1fef2a)
- VEML7700\_ALS\_PERS\_4 : [veml7700.h](veml7700_8h.md#a1f84fa22aa00479b23ada96982aa0146a5a8ddd8d08092ded93e07ce64f78a9c2)
- VEML7700\_ALS\_PERS\_8 : [veml7700.h](veml7700_8h.md#a1f84fa22aa00479b23ada96982aa0146a01121c07606684416e34746df20334b5)
- VEML7700\_INT\_DISABLED : [veml7700.h](veml7700_8h.md#a1f84fa22aa00479b23ada96982aa0146a81b919fc1c21b8202a76013a8229534f)
- veml7700\_int\_mode : [veml7700.h](veml7700_8h.md#a1f84fa22aa00479b23ada96982aa0146)
- VENDOR\_REQ\_DEFINE : [usbd.h](group__usbd__api.md#ga54ca08c74ae715281381d878f828727e)
- VERTEX2F : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga033cea1b18c3f010aaa0293f6972069a)
- VERTEX2II : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#gae779df636416e900ddc15b95cf2a923c)
- vfprintf() : [stdio.h](stdio_8h.md#abc4556d2008bb7d9345dd8bef8ef65ee)
- vfprintfcb() : [cbprintf.h](group__cbprintf__apis.md#ga24d7226976f3acbe579b6d6b5d530ade)
- video\_api\_dequeue\_t : [video.h](group__video__interface.md#ga16c82da50c6024d36b65fd1c6f33721d)
- video\_api\_enqueue\_t : [video.h](group__video__interface.md#ga161a0320e7e84935f809d6460064c0fe)
- video\_api\_flush\_t : [video.h](group__video__interface.md#gad308f355cd9d5a5d56bd0c81d31626db)
- video\_api\_get\_caps\_t : [video.h](group__video__interface.md#gad4a0c666d5534f9daed7d3c9a00c1312)
- video\_api\_get\_ctrl\_t : [video.h](group__video__interface.md#gaa0779e606de3ec27e1e9230cd13a090c)
- video\_api\_get\_format\_t : [video.h](group__video__interface.md#ga7c85f21c1e1839bce84bbce3e339903d)
- video\_api\_set\_ctrl\_t : [video.h](group__video__interface.md#gad392294a57d6fb191058cf852a5adc8a)
- video\_api\_set\_format\_t : [video.h](group__video__interface.md#gaf6e1ac05a51ae9afaf2569311853ee18)
- video\_api\_set\_signal\_t : [video.h](group__video__interface.md#ga9d08347300d2e3c8dc7ae01d2902d321)
- video\_api\_stream\_start\_t : [video.h](group__video__interface.md#ga06fe3e6bfed2d817c5c239161d8a777e)
- video\_api\_stream\_stop\_t : [video.h](group__video__interface.md#ga5e8564970bd5cc3b57ee23ff223460bd)
- VIDEO\_BUF\_ABORTED : [video.h](group__video__interface.md#gga0f50f287c4075e992fbab6d8a990d7a8a268855ccd0d8e10f608d4dac5f76fac8)
- VIDEO\_BUF\_DONE : [video.h](group__video__interface.md#gga0f50f287c4075e992fbab6d8a990d7a8ad7499b0b62f470b63d624ec49d358db8)
- VIDEO\_BUF\_ERROR : [video.h](group__video__interface.md#gga0f50f287c4075e992fbab6d8a990d7a8afe8726c40851834057bbf9d99b0433a3)
- video\_buffer\_alloc() : [video.h](group__video__interface.md#ga8454f5568e24cf7b8a59dde765b4a804)
- video\_buffer\_release() : [video.h](group__video__interface.md#gad2661653db019b673153001b2c61b10f)
- VIDEO\_CID\_CAMERA\_BRIGHTNESS : [video-controls.h](group__video__controls.md#ga5d319ac87c6ab1b55942d3dba03633a2)
- VIDEO\_CID\_CAMERA\_COLORBAR : [video-controls.h](group__video__controls.md#ga768f96e23708c246876dbfd1ea53ff0e)
- VIDEO\_CID\_CAMERA\_CONTRAST : [video-controls.h](group__video__controls.md#gab5b1a60e991369f147b80c96859e84d1)
- VIDEO\_CID\_CAMERA\_EXPOSURE : [video-controls.h](group__video__controls.md#gae980f038dfff97ee5b159eeff3f141dc)
- VIDEO\_CID\_CAMERA\_GAIN : [video-controls.h](group__video__controls.md#ga4581eedcb07f461f6f7a44a81eb3a2a3)
- VIDEO\_CID\_CAMERA\_QUALITY : [video-controls.h](group__video__controls.md#ga374763bc215a167f539f48b89a732d03)
- VIDEO\_CID\_CAMERA\_SATURATION : [video-controls.h](group__video__controls.md#ga8224ea66f4752b6b4dd013deedb25b7c)
- VIDEO\_CID\_CAMERA\_WHITE\_BAL : [video-controls.h](group__video__controls.md#ga477ee6f02316a5fdb6d78b46e9c7cb3a)
- VIDEO\_CID\_CAMERA\_ZOOM : [video-controls.h](group__video__controls.md#gaad75298a3927f047b29a7505cb63abd1)
- VIDEO\_CID\_HFLIP : [video-controls.h](group__video__controls.md#ga59aa47b6f558ef5ae64a67f4a7ac7e31)
- VIDEO\_CID\_VFLIP : [video-controls.h](group__video__controls.md#ga16651a6825b619399a333ed39e802dfc)
- VIDEO\_CTRL\_CLASS\_CAMERA : [video-controls.h](group__video__controls.md#gaf08fd11d488f66ac7e7a56c6caf2d6a2)
- VIDEO\_CTRL\_CLASS\_GENERIC : [video-controls.h](group__video__controls.md#ga21e3872f19c37495e733a8a60cf74b9d)
- VIDEO\_CTRL\_CLASS\_JPEG : [video-controls.h](group__video__controls.md#gaeba7afc9a30cef1b8a95ca88b23ec057)
- VIDEO\_CTRL\_CLASS\_MPEG : [video-controls.h](group__video__controls.md#ga05599b37f8d9cabd450c49561535ead7)
- VIDEO\_CTRL\_CLASS\_VENDOR : [video-controls.h](group__video__controls.md#ga9ec6cd7d3c5d82d5abefcf3a72e4c25b)
- video\_dequeue() : [video.h](group__video__interface.md#ga9862024c9b07855609ea2078680c9afd)
- video\_endpoint\_id : [video.h](group__video__interface.md#gafa3d076a1324ea54b5c5ec7806cb2ef9)
- video\_enqueue() : [video.h](group__video__interface.md#gac19d14a5875d48c96bd66a8bb65e8a51)
- VIDEO\_EP\_ANY : [video.h](group__video__interface.md#ggafa3d076a1324ea54b5c5ec7806cb2ef9a450d124253f8463114b851b1e51960fb)
- VIDEO\_EP\_IN : [video.h](group__video__interface.md#ggafa3d076a1324ea54b5c5ec7806cb2ef9a33427df6cd696ceede84d93d5245d3e7)
- VIDEO\_EP\_NONE : [video.h](group__video__interface.md#ggafa3d076a1324ea54b5c5ec7806cb2ef9a4293b9f211c8ec80d5ad873cec7022c7)
- VIDEO\_EP\_OUT : [video.h](group__video__interface.md#ggafa3d076a1324ea54b5c5ec7806cb2ef9a69d107ac2c94372d4ae872b4e7e4b35a)
- video\_flush() : [video.h](group__video__interface.md#gae5e6256ab799ca1cbbac4987b82bb145)
- video\_fourcc : [video.h](group__video__interface.md#gabeacdd211927e893561446fd7299ab08)
- video\_get\_caps() : [video.h](group__video__interface.md#ga4d5237607c858708380955705a2023bd)
- video\_get\_ctrl() : [video.h](group__video__interface.md#ga664122e82da802f1dff8b5c30e158acd)
- video\_get\_format() : [video.h](group__video__interface.md#gac0964bd0b57c6be5e773a21af0438edc)
- VIDEO\_PIX\_FMT\_BGGR8 : [video.h](group__video__pixel__formats.md#ga64ad74bb6c92041a4190614b684ae024)
- VIDEO\_PIX\_FMT\_GBRG8 : [video.h](group__video__pixel__formats.md#gaebdfd9d4230b56f6b8533630356b8793)
- VIDEO\_PIX\_FMT\_GRBG8 : [video.h](group__video__pixel__formats.md#ga6b9c8d43406e45927f4e9e94504eae9c)
- VIDEO\_PIX\_FMT\_JPEG : [video.h](group__video__pixel__formats.md#ga035a13c38c4f123411547e2c40d58bd2)
- VIDEO\_PIX\_FMT\_RGB565 : [video.h](group__video__pixel__formats.md#gaf009d0eb7dbdb3bfd8883da03478c1ec)
- VIDEO\_PIX\_FMT\_RGGB8 : [video.h](group__video__pixel__formats.md#ga0c98dc205b724c9e4556e41cc266d80e)
- VIDEO\_PIX\_FMT\_YUYV : [video.h](group__video__pixel__formats.md#gad186d3166acec11c893ae57a0ae68f11)
- video\_set\_ctrl() : [video.h](group__video__interface.md#ga87873a4612cfbd2cb62595dec15cb77e)
- video\_set\_format() : [video.h](group__video__interface.md#gae38df95199e41ac197b9754824b2bd29)
- video\_set\_signal() : [video.h](group__video__interface.md#gab38a9f956f5d5452fc6e0c0f1bf382be)
- video\_signal\_result : [video.h](group__video__interface.md#ga0f50f287c4075e992fbab6d8a990d7a8)
- video\_stream\_start() : [video.h](group__video__interface.md#ga7145a18ad5e3e5d74398c89c00ea19f0)
- video\_stream\_stop() : [video.h](group__video__interface.md#ga6464dede55777c9082e85d6af43a4d48)
- VIM\_ACTFIQ : [intc\_vim.h](intc__vim_8h.md#a48bda38b33fc5dfc695dfdbe627f4984)
- VIM\_ACTFIQ\_NUM\_MASK : [intc\_vim.h](intc__vim_8h.md#a6245859896c6fcaf000ce56a04d30d5f)
- VIM\_ACTFIQ\_NUM\_MAX : [intc\_vim.h](intc__vim_8h.md#a6e1d51c6b92462e9789ba0dcc2d3bd53)
- VIM\_ACTFIQ\_NUM\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a09b7e2ffd6b9e526bb3088a421e5efc4)
- VIM\_ACTFIQ\_NUM\_SHIFT : [intc\_vim.h](intc__vim_8h.md#adc5bba8d5dd9a72a6db1b5ed51145159)
- VIM\_ACTFIQ\_PRI\_MASK : [intc\_vim.h](intc__vim_8h.md#a53c9c40d87a7f364b61a6e2f626ec289)
- VIM\_ACTFIQ\_PRI\_MAX : [intc\_vim.h](intc__vim_8h.md#a22d18ac005433d054a6a15dff39c6e68)
- VIM\_ACTFIQ\_PRI\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a51ccd75970e116bac2e1a35c6de1170f)
- VIM\_ACTFIQ\_PRI\_SHIFT : [intc\_vim.h](intc__vim_8h.md#afd741827c49d9ab22ef4982061e48867)
- VIM\_ACTFIQ\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a29431d2fd28113d56f66531593876580)
- VIM\_ACTFIQ\_VALID\_MASK : [intc\_vim.h](intc__vim_8h.md#a5f654648e1fceddc473017f5c69ebfde)
- VIM\_ACTFIQ\_VALID\_MAX : [intc\_vim.h](intc__vim_8h.md#a4c3805e9372e278fa041f29b1cc79be0)
- VIM\_ACTFIQ\_VALID\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#adde70d87d3232e8cebd56058a0ba11c0)
- VIM\_ACTFIQ\_VALID\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a8891923ca180a27349b5ac4c50b75624)
- VIM\_ACTFIQ\_VALID\_VAL\_FALSE : [intc\_vim.h](intc__vim_8h.md#ad931b8267aa9895fb907f83b9bcab0a8)
- VIM\_ACTFIQ\_VALID\_VAL\_TRUE : [intc\_vim.h](intc__vim_8h.md#a89a2a0626470f6d4efe41ea9790d6dfb)
- VIM\_ACTIRQ : [intc\_vim.h](intc__vim_8h.md#a814d881a2f50b7b47ab25084f59587f5)
- VIM\_ACTIRQ\_NUM\_MASK : [intc\_vim.h](intc__vim_8h.md#af37fe4204363b131433c08e144b706c0)
- VIM\_ACTIRQ\_NUM\_MAX : [intc\_vim.h](intc__vim_8h.md#ac1e4050ca8a6f725df77e3066fb75577)
- VIM\_ACTIRQ\_NUM\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a891dc381e24ccef01b7ddc3004e68f72)
- VIM\_ACTIRQ\_NUM\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a1fb7025bd77510c4aa4735205a5e0119)
- VIM\_ACTIRQ\_PRI\_MASK : [intc\_vim.h](intc__vim_8h.md#aa67330dfd1a07514b6aefb175688f6a2)
- VIM\_ACTIRQ\_PRI\_MAX : [intc\_vim.h](intc__vim_8h.md#af5af969746c802c3fcc54624cc8fc1c5)
- VIM\_ACTIRQ\_PRI\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a407ec18db62cdab6fc03e2e91d8f7a48)
- VIM\_ACTIRQ\_PRI\_SHIFT : [intc\_vim.h](intc__vim_8h.md#aa7f7b505e9f67ef073b27eecfd2e24dd)
- VIM\_ACTIRQ\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#afe3be53299ab4dd7f158cb887d2a71af)
- VIM\_ACTIRQ\_VALID\_MASK : [intc\_vim.h](intc__vim_8h.md#a9740e75023b8bf6ddc87f2aabc234a5c)
- VIM\_ACTIRQ\_VALID\_MAX : [intc\_vim.h](intc__vim_8h.md#a8c0cf47b8dca0ed71e45a0d2cf791cf9)
- VIM\_ACTIRQ\_VALID\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#ad41b0eebaa403614473d6d91b3c54708)
- VIM\_ACTIRQ\_VALID\_SHIFT : [intc\_vim.h](intc__vim_8h.md#ab80c58ab4e04413ec1108ab4899758e4)
- VIM\_ACTIRQ\_VALID\_VAL\_FALSE : [intc\_vim.h](intc__vim_8h.md#a4755bb481e7b635fb78a1ed1645fd65f)
- VIM\_ACTIRQ\_VALID\_VAL\_TRUE : [intc\_vim.h](intc__vim_8h.md#a67149d8156c8c49e50ffd974ff541be8)
- VIM\_BASE\_ADDR : [intc\_vim.h](intc__vim_8h.md#a6b442dccdb4e254cac43abd28c0a724d)
- VIM\_DEDVEC : [intc\_vim.h](intc__vim_8h.md#ac77876e0bfdd3a9382e28728d9e2ebd3)
- VIM\_DEDVEC\_ADDR\_MASK : [intc\_vim.h](intc__vim_8h.md#a29b50c725ad2f701fb0c324f178579fb)
- VIM\_DEDVEC\_ADDR\_MAX : [intc\_vim.h](intc__vim_8h.md#a4d3ae5e999ff96654cd472211788f203)
- VIM\_DEDVEC\_ADDR\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a549218cf3d2c3031ad08a2c2cc0138b0)
- VIM\_DEDVEC\_ADDR\_SHIFT : [intc\_vim.h](intc__vim_8h.md#aa2d21a760a0307ad49b55880652ad2de)
- VIM\_DEDVEC\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a8245d6946648411610d113a2c85a9e91)
- VIM\_FIQGSTS : [intc\_vim.h](intc__vim_8h.md#a6c2b44a4cabf058542f9663f48d1bc07)
- VIM\_FIQGSTS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#ada89357c38ffaa43681b7e874aaddd6a)
- VIM\_FIQGSTS\_STS\_MASK : [intc\_vim.h](intc__vim_8h.md#a4047a2f3c251c623a7bb4f03e2c80aa9)
- VIM\_FIQGSTS\_STS\_MAX : [intc\_vim.h](intc__vim_8h.md#a06d51cb097cedabe76ab25fb2336be2b)
- VIM\_FIQGSTS\_STS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#ac814862811ec1cf1d1e240c03fa5220a)
- VIM\_FIQGSTS\_STS\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a0cf8b2290a847eccb9206368c36d84d3)
- VIM\_FIQSTS : [intc\_vim.h](intc__vim_8h.md#ac20f6ab045eb4c7193c94252d4ee26a5)
- VIM\_FIQVEC : [intc\_vim.h](intc__vim_8h.md#aba9caef8adb052c353f54679b95f4001)
- VIM\_FIQVEC\_ADDR\_MASK : [intc\_vim.h](intc__vim_8h.md#a88ff3e766b092657a21fdf7ae2e93564)
- VIM\_FIQVEC\_ADDR\_MAX : [intc\_vim.h](intc__vim_8h.md#a9e15f36e9494b3f69bbf49d962c38590)
- VIM\_FIQVEC\_ADDR\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a5694973ce948cb75ec95b457b58544a5)
- VIM\_FIQVEC\_ADDR\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a0db8828c7c1b359335220d80cf6fcb6f)
- VIM\_FIQVEC\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a972fd2da90560b549d4eacc367643367)
- VIM\_GET\_IRQ\_BIT\_NUM : [intc\_vim.h](intc__vim_8h.md#a765f1dd48172c22f4fb9cb5eb2c0ecfc)
- VIM\_GET\_IRQ\_GROUP\_NUM : [intc\_vim.h](intc__vim_8h.md#a2bbbdbfa2a3dd00d1bd54d5c804220c1)
- VIM\_GRP\_FIQSTS\_MSK\_MASK : [intc\_vim.h](intc__vim_8h.md#a374962357620f5b6ea7f3938158f52c9)
- VIM\_GRP\_FIQSTS\_MSK\_MAX : [intc\_vim.h](intc__vim_8h.md#a7698addaef1b0850b538b508762da567)
- VIM\_GRP\_FIQSTS\_MSK\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a75f2aa2343da1e6f1577189911c685ce)
- VIM\_GRP\_FIQSTS\_MSK\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a3b5c2839ef08c51d8163048023bec7bc)
- VIM\_GRP\_FIQSTS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#aff2481d09e0ed29c7206d28c098a0d14)
- VIM\_GRP\_INTMAP\_MSK\_MASK : [intc\_vim.h](intc__vim_8h.md#a0259713478ab1f5930d1b303450d9b72)
- VIM\_GRP\_INTMAP\_MSK\_MAX : [intc\_vim.h](intc__vim_8h.md#ad64d7f6045a420d2ed78f6bb0446294f)
- VIM\_GRP\_INTMAP\_MSK\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#ac5d9e9e42d0c203c22a357ccec802c72)
- VIM\_GRP\_INTMAP\_MSK\_SHIFT : [intc\_vim.h](intc__vim_8h.md#aea4c913d99500c4b3cb1c60b5b514c2f)
- VIM\_GRP\_INTMAP\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a104e9c67c35b9656d451efbe5045cb78)
- VIM\_GRP\_INTR\_EN\_CLR\_MSK\_MASK : [intc\_vim.h](intc__vim_8h.md#a5b0397e530cdcc0ae4f88796a9ef86ef)
- VIM\_GRP\_INTR\_EN\_CLR\_MSK\_MAX : [intc\_vim.h](intc__vim_8h.md#a1af7c911da646796d1091c4da9f45bf9)
- VIM\_GRP\_INTR\_EN\_CLR\_MSK\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a5617ad614b65e9341c5f9b4a3405fce6)
- VIM\_GRP\_INTR\_EN\_CLR\_MSK\_SHIFT : [intc\_vim.h](intc__vim_8h.md#ae3fde9d57f6e6328a7f88f6889d91c3a)
- VIM\_GRP\_INTR\_EN\_CLR\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a1113d705a90dd04e9af1999c37f9cb8e)
- VIM\_GRP\_INTR\_EN\_SET\_MSK\_MASK : [intc\_vim.h](intc__vim_8h.md#a339c2737a2eb9180b78305a058b6aa90)
- VIM\_GRP\_INTR\_EN\_SET\_MSK\_MAX : [intc\_vim.h](intc__vim_8h.md#a61e07bf8b299223d8d4767aaa2e718b2)
- VIM\_GRP\_INTR\_EN\_SET\_MSK\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a81eb2356267a972232177b893bc41fb7)
- VIM\_GRP\_INTR\_EN\_SET\_MSK\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a9c5eb8d20f8de659ca970cd69c4cd193)
- VIM\_GRP\_INTR\_EN\_SET\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a23b0f2ce857795c9e6c6faf35f124d02)
- VIM\_GRP\_INTTYPE\_MSK\_MASK : [intc\_vim.h](intc__vim_8h.md#a29cdb963486249ff8d87c1bf4ceeeb74)
- VIM\_GRP\_INTTYPE\_MSK\_MAX : [intc\_vim.h](intc__vim_8h.md#a37f2063ecf4acdd91ab16a8941a9c51c)
- VIM\_GRP\_INTTYPE\_MSK\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a5d3443ac8213a8c02c364c9e6f37690c)
- VIM\_GRP\_INTTYPE\_MSK\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a6c1cd189c9e5426b8a79b97b1f860753)
- VIM\_GRP\_INTTYPE\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a35adc119bb4371fe8cf7070336935720)
- VIM\_GRP\_IRQSTS\_MSK\_MASK : [intc\_vim.h](intc__vim_8h.md#a13abe76418c094499d537b7fad5a171c)
- VIM\_GRP\_IRQSTS\_MSK\_MAX : [intc\_vim.h](intc__vim_8h.md#aa3a16c92d1f55aff8a9b750990a7daf1)
- VIM\_GRP\_IRQSTS\_MSK\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#ac4d5bf5d6ee09462f4254a12db2bad44)
- VIM\_GRP\_IRQSTS\_MSK\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a24299da38556f543de8e12ff36a81d38)
- VIM\_GRP\_IRQSTS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a308a20f9e29c85ece314a6a005b6a4dd)
- VIM\_GRP\_RAW\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a4817d3ad8ab3b557b19882b272d67d1b)
- VIM\_GRP\_RAW\_STS\_MASK : [intc\_vim.h](intc__vim_8h.md#acd62766b3379b5baf178a33b6ff3d905)
- VIM\_GRP\_RAW\_STS\_MAX : [intc\_vim.h](intc__vim_8h.md#a2842ee6521e5115eb85dd2b591aebd9b)
- VIM\_GRP\_RAW\_STS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#aa82ed994598088a4a39bf628d78dc747)
- VIM\_GRP\_RAW\_STS\_SHIFT : [intc\_vim.h](intc__vim_8h.md#ad28eafc29daa6e59de34e62f1493cfca)
- VIM\_GRP\_STS\_MSK\_MASK : [intc\_vim.h](intc__vim_8h.md#a7f4d55def9ac847ff1c2f6739f09a636)
- VIM\_GRP\_STS\_MSK\_MAX : [intc\_vim.h](intc__vim_8h.md#a1c452655a919216d7ba809d96e1b0287)
- VIM\_GRP\_STS\_MSK\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#aec03c90df4149318acb41f1feacd4392)
- VIM\_GRP\_STS\_MSK\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a79f980ac35a193b154853fd35aa8bcaf)
- VIM\_GRP\_STS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a229308ab7f2cd16ce15cbe0dd8c0197b)
- VIM\_INFO : [intc\_vim.h](intc__vim_8h.md#adf312872ea552e35a0e9fed4ef69ae11)
- VIM\_INFO\_INTERRUPTS\_MASK : [intc\_vim.h](intc__vim_8h.md#adeba4e94c9d68665820fd13483d24b85)
- VIM\_INFO\_INTERRUPTS\_MAX : [intc\_vim.h](intc__vim_8h.md#aca715ba5a23516302a6c1a648fbbdeea)
- VIM\_INFO\_INTERRUPTS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#ad37820d3013c0ed4867a7235ee16444f)
- VIM\_INFO\_INTERRUPTS\_SHIFT : [intc\_vim.h](intc__vim_8h.md#ace1cb4b9d2de191575a9bba21882a025)
- VIM\_INFO\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a3fc8c50f54bc3a158dbfef51fb96ee5b)
- VIM\_INTMAP : [intc\_vim.h](intc__vim_8h.md#adbf1801e1f7dfa45f19f20e91ccbf1e2)
- VIM\_INTR\_EN\_CLR : [intc\_vim.h](intc__vim_8h.md#a313eefa1e7b90c3988c8d15c1dfb2aae)
- VIM\_INTR\_EN\_SET : [intc\_vim.h](intc__vim_8h.md#a0d2b404f0483d09a32b6a4914cd660ef)
- VIM\_INTTYPE : [intc\_vim.h](intc__vim_8h.md#a28965b8d5ed95f9bd0322e95d41aa65c)
- VIM\_IRQGSTS : [intc\_vim.h](intc__vim_8h.md#a7bcbdd8241d466014361b13baf43d81b)
- VIM\_IRQGSTS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a674113c74daca28dc3a3777cf2a33917)
- VIM\_IRQGSTS\_STS\_MASK : [intc\_vim.h](intc__vim_8h.md#a4497e08f4d565ace708e50c84f0f51b6)
- VIM\_IRQGSTS\_STS\_MAX : [intc\_vim.h](intc__vim_8h.md#a82828e470cbcd1df782ed463c61ecfee)
- VIM\_IRQGSTS\_STS\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#af7d810589915de14ab7cff616fdb0b5f)
- VIM\_IRQGSTS\_STS\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a03180f0120311298a518f8f109fa2dee)
- VIM\_IRQSTS : [intc\_vim.h](intc__vim_8h.md#a6a07b16389503e1131e9b46e84545c4e)
- VIM\_IRQVEC : [intc\_vim.h](intc__vim_8h.md#a893a5e8467a3e5417272dedc098e42b5)
- VIM\_IRQVEC\_ADDR\_MASK : [intc\_vim.h](intc__vim_8h.md#a854706bcbaeb0764d2dac7a325734b20)
- VIM\_IRQVEC\_ADDR\_MAX : [intc\_vim.h](intc__vim_8h.md#abb959b8bcc866cc955ae998ae62a2feb)
- VIM\_IRQVEC\_ADDR\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#ad0643477818df3a01ec0aad56be04cb1)
- VIM\_IRQVEC\_ADDR\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a692248d3c771837c934b2057573511f7)
- VIM\_IRQVEC\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a5c92254c2655c9a73f13eba43e50a398)
- VIM\_MAX\_GROUP\_NUM : [intc\_vim.h](intc__vim_8h.md#a2520b3f68146858942723fe295c0dae4)
- VIM\_MAX\_IRQ\_PER\_GROUP : [intc\_vim.h](intc__vim_8h.md#af3def9f38617688929e29eec9651c64b)
- VIM\_PID : [intc\_vim.h](intc__vim_8h.md#a378ef153f705928fff529e02838d50af)
- VIM\_PRI\_INT : [intc\_vim.h](intc__vim_8h.md#ad7c36f8650ff847544a550a31235193b)
- VIM\_PRI\_INT\_MAX : [intc\_vim.h](intc__vim_8h.md#aba7671d7f7dee14d87f7feff8a3451f7)
- VIM\_PRI\_INT\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a72fa57b55ef32e7c7db63932c28d65da)
- VIM\_PRI\_INT\_VAL\_MASK : [intc\_vim.h](intc__vim_8h.md#a996fc01313c3b05b298f32b7691a0ba1)
- VIM\_PRI\_INT\_VAL\_MAX : [intc\_vim.h](intc__vim_8h.md#af8297a7ca4b4b0cddb3703312fb858bb)
- VIM\_PRI\_INT\_VAL\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a413968f03758ca53b005bfe7c5e3023b)
- VIM\_PRI\_INT\_VAL\_SHIFT : [intc\_vim.h](intc__vim_8h.md#ad9d91c69c20c243578aea8028d4635a2)
- VIM\_PRIFIQ : [intc\_vim.h](intc__vim_8h.md#a17ea1cd9d06d003bbc094bffbefb47c4)
- VIM\_PRIFIQ\_NUM\_MASK : [intc\_vim.h](intc__vim_8h.md#aad509ed553a5e15f893390481ac739fa)
- VIM\_PRIFIQ\_NUM\_MAX : [intc\_vim.h](intc__vim_8h.md#ac27797438659455e527d82e9fb586b5a)
- VIM\_PRIFIQ\_NUM\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a608c0a95598b701c377351bdab275df4)
- VIM\_PRIFIQ\_NUM\_SHIFT : [intc\_vim.h](intc__vim_8h.md#af8b15089bdd21a468168c1d5e8fc7dad)
- VIM\_PRIFIQ\_PRI\_MASK : [intc\_vim.h](intc__vim_8h.md#a6de77b9058d6b58314097adebe045a86)
- VIM\_PRIFIQ\_PRI\_MAX : [intc\_vim.h](intc__vim_8h.md#a67922050c7eb81575c1b7b1e227b6839)
- VIM\_PRIFIQ\_PRI\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#aa810609b09640d548c56bdfb09b9868c)
- VIM\_PRIFIQ\_PRI\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a3d61188f8ce9b07ac1bcb708c0a28619)
- VIM\_PRIFIQ\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#adf127d9e139beb74e65b88741d82013a)
- VIM\_PRIFIQ\_VALID\_MASK : [intc\_vim.h](intc__vim_8h.md#aba90d57af70816d9b58dc8851f6da004)
- VIM\_PRIFIQ\_VALID\_MAX : [intc\_vim.h](intc__vim_8h.md#ac8173b6b098e38ea9eebbf79e8f8a1da)
- VIM\_PRIFIQ\_VALID\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a322fe75f392fb162f1c04330990ed2d7)
- VIM\_PRIFIQ\_VALID\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a3c93252a9eae445243cd8a9c39d79f82)
- VIM\_PRIFIQ\_VALID\_VAL\_FALSE : [intc\_vim.h](intc__vim_8h.md#a6bdf3d9847f3ccad759874bb5b09cfb4)
- VIM\_PRIFIQ\_VALID\_VAL\_TRUE : [intc\_vim.h](intc__vim_8h.md#ac5ced3000f18ecfc7fc5ea07e3473f78)
- VIM\_PRIIRQ : [intc\_vim.h](intc__vim_8h.md#ab4ee6967e7149c07a2690978e7a2f97b)
- VIM\_PRIIRQ\_NUM\_MASK : [intc\_vim.h](intc__vim_8h.md#a236930837a36a72e4b29f81175537543)
- VIM\_PRIIRQ\_NUM\_MAX : [intc\_vim.h](intc__vim_8h.md#a610e6f20d550a0cc5e90f31f7ce9f065)
- VIM\_PRIIRQ\_NUM\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a4376b256f168336b45108b8255a0f92f)
- VIM\_PRIIRQ\_NUM\_SHIFT : [intc\_vim.h](intc__vim_8h.md#ac7956ab58b6223b8e511892ff35d9375)
- VIM\_PRIIRQ\_PRI\_MASK : [intc\_vim.h](intc__vim_8h.md#ad952cdc46228507194a3b19baf6d71e7)
- VIM\_PRIIRQ\_PRI\_MAX : [intc\_vim.h](intc__vim_8h.md#ac3f1624d169a99edb836f3a3ba82acfa)
- VIM\_PRIIRQ\_PRI\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a810037874c898a7c0f738096406b9148)
- VIM\_PRIIRQ\_PRI\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a31ed4fa3d085d39863d0da6b657ca0df)
- VIM\_PRIIRQ\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a13826544f2e9cd4ce4164b62d8e82d7e)
- VIM\_PRIIRQ\_VALID\_MASK : [intc\_vim.h](intc__vim_8h.md#a4d4d0d285eabeccb6418c442a7b3453b)
- VIM\_PRIIRQ\_VALID\_MAX : [intc\_vim.h](intc__vim_8h.md#aacbd1281fb54586fa48c6ed3d49d62cd)
- VIM\_PRIIRQ\_VALID\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a7026e741d660e4d893ac1457c12ef827)
- VIM\_PRIIRQ\_VALID\_SHIFT : [intc\_vim.h](intc__vim_8h.md#acaca01cbd74088f455f8345472424339)
- VIM\_PRIIRQ\_VALID\_VAL\_FALSE : [intc\_vim.h](intc__vim_8h.md#a0966b95628413d1efdf9e572783865bd)
- VIM\_PRIIRQ\_VALID\_VAL\_TRUE : [intc\_vim.h](intc__vim_8h.md#adc2729dd6329da29bac1ac4942003f7d)
- VIM\_RAW : [intc\_vim.h](intc__vim_8h.md#a0b86c01e8e3844c71a74380c2392a847)
- VIM\_STS : [intc\_vim.h](intc__vim_8h.md#ae714f8162f5840ab2eb655d48c92ac99)
- VIM\_VEC\_INT : [intc\_vim.h](intc__vim_8h.md#abb38d6437a3f25c193c2506fe97cf89c)
- VIM\_VEC\_INT\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a16bd2873cba17ebd29acd3aeb58b2df4)
- VIM\_VEC\_INT\_VAL\_MASK : [intc\_vim.h](intc__vim_8h.md#a8076a54316cec3fc0de52079bd4cd598)
- VIM\_VEC\_INT\_VAL\_MAX : [intc\_vim.h](intc__vim_8h.md#a769edf746fb1ef704f85bfdee55fb136)
- VIM\_VEC\_INT\_VAL\_RESETVAL : [intc\_vim.h](intc__vim_8h.md#a3dd1401816579e5d07876b87b34e2177)
- VIM\_VEC\_INT\_VAL\_SHIFT : [intc\_vim.h](intc__vim_8h.md#a3024d3c80cdc3db66954fa83541ca389)
- virtual\_interface\_caps : [virtual.h](group__virtual.md#ga8f188f5c2f19960d7113da52aefe8091)
- VIRTUAL\_INTERFACE\_IPIP : [virtual.h](group__virtual.md#gga8f188f5c2f19960d7113da52aefe8091a097c314c36dc5f7129f1c8bb1e110071)
- VM\_ASID\_BITS : [arm\_mmu.h](4_2arm__mmu_8h.md#a9c2e741f0962da342556c5933dcb3e13)
- VOLTAGE\_DIVIDER\_DT\_SPEC\_GET : [voltage\_divider.h](voltage__divider_8h.md#a4ed91297930bbf6b865075a9e9ba2bce)
- voltage\_divider\_scale\_dt() : [voltage\_divider.h](voltage__divider_8h.md#a891c6ee6073582761e63cadeaf228563)
- vprintf() : [stdio.h](stdio_8h.md#a1af16e2ea2a90f8b64983c9b3e644fad)
- vprintfcb() : [cbprintf.h](group__cbprintf__apis.md#gaa70a1b73fb04b88b40c1fa5fd65efd15)
- vprintk() : [printk.h](printk_8h.md#a23609ef1acea586b44f71d32283fea23)
- VRING\_COUNT : [ipc\_static\_vrings.h](group__ipc__service__static__vrings__api.md#ga2b05772c325881ba650dc01f3e6e2834)
- VSAFE5V : [pd.h](pd_8h.md#ae3c4f39fb7ff5b00bdc25676af3b88f7)
- vsnprintf() : [stdio.h](stdio_8h.md#a632165581e7417488441b703393668a4)
- vsnprintfcb() : [cbprintf.h](group__cbprintf__apis.md#ga37b0f96a7b9c025659a902e8fd614b33)
- vsnprintk() : [printk.h](printk_8h.md#ae824cc3368607ee5d45f860a1389794a)
- vsprintf() : [stdio.h](stdio_8h.md#a0cf1b75a23729bcc1669ce788d01aa63)
- VT100\_COLOR\_END : [shell\_types.h](shell__types_8h.md#a6dcf569be711db32286fb1ef2dcf36d2aab87d1e19b4d687eb1fee07c73a33bd4)
- VTD\_AFLOG\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ade4fdd4c9b03342ed83a99a1de4fdfce)
- vtd\_alloc\_entries\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a3bded96a42bec41476ff6bc9f75676b4)
- vtd\_allocate\_entries() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a87b1cea7c86d724da0c379bfd3742879)
- VTD\_CAP\_FRO : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a4954ce494102274e62e3ea4db26c5c47)
- VTD\_CAP\_FRO\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a5958f3ae27386add66d3860e59f75d44)
- VTD\_CAP\_FRO\_POS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a6be01a7dc85f094a1b69d724178a17f9)
- VTD\_CAP\_NFR : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a26f66a18afc6c082d3bb88de92048239)
- VTD\_CAP\_NFR\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aed3f6c10d7c8c0e8ff36fafc9b1914b2)
- VTD\_CAP\_NFR\_POS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a3e8a1c8cc230c8baa2b632232fbdee43)
- VTD\_CAP\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a8e12194a86d1a54e3bb342dc40ea41be)
- VTD\_CCMD\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aa57bd08d48e54a6570a91289f2f3de73)
- VTD\_ECAP\_C : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#af8c0e9a9135fbac1a31f807fa31854ce)
- VTD\_ECAP\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a354bd108771d1e9214df604dcfad5291)
- VTD\_FEADDR\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a844dfe526758c9430caae2b45d5997cd)
- VTD\_FECTL\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a2b1363ea2de4c496caae52789f4602f6)
- VTD\_FECTL\_REG\_IM : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a5e62a41b65a94300ab98bad8f00984c2)
- VTD\_FECTL\_REG\_IP : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a3bb481c87768989a1c42effa0f4f1cbc)
- VTD\_FEDATA\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a257e82a689b9e0bbf27593c034654453)
- VTD\_FEUADDR\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a99b27d978fe934be907455edc923f349)
- VTD\_FRCD\_F : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a8c0f1380ac4841fb9d42c3598c0e71d3)
- VTD\_FRCD\_FI : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a97c3fde0e13fb1320ff94eec27e34583)
- VTD\_FRCD\_FI\_IR : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aa927f2cdda78bbbd3f846d8ea422a1fa)
- VTD\_FRCD\_FI\_IR\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a0d8b4f5199c3c3cba38e0e03bb180226)
- VTD\_FRCD\_FI\_IR\_POS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a914df4290ce328e4b7af6300b1901010)
- VTD\_FRCD\_FI\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a642177b1daa871203f905d8240541d31)
- VTD\_FRCD\_FI\_POS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aa974782decb4c4168b81f88b96f83de4)
- VTD\_FRCD\_FR : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#adc14712ae3a0c05ea91cc33f081cf8e8)
- VTD\_FRCD\_FR\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a080b1bf3b5e82b8a116ddecad71e92af)
- VTD\_FRCD\_FR\_POS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#abda94b6920c2d8eaf7869a847623387b)
- VTD\_FRCD\_REG\_SIZE : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a72c6aa91c80cc91f7d6d500468af2af4)
- VTD\_FRCD\_SID : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aa3b09820d198289144f7b94ce0d8dfd3)
- VTD\_FRCD\_SID\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aa1cc5e6b0e1ef462a6b8bd413394f25e)
- VTD\_FRCD\_T : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a4284d75cae56e03cafa90f4688579e47)
- VTD\_FSTS\_AFO : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#afb789ca74454c2d98af565f4e2475794)
- VTD\_FSTS\_APF : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a29c5874aefa4e6fb03bec4d413e4a28a)
- VTD\_FSTS\_CLEAR : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a6b1c92f5cfa7076b5faf07411b5961f6)
- VTD\_FSTS\_CLEAR\_STATUS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a3777767d5237f1c9fd01ef443616682d)
- VTD\_FSTS\_FRI : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a82b00aeb6434202908e86e23135e5e09)
- VTD\_FSTS\_FRI\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a818a7264f3a2275541f350b12b3a34a6)
- VTD\_FSTS\_FRI\_POS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a799b213d8a02bac5fe5b31e826233ebb)
- VTD\_FSTS\_ICE : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a4f65f47bb0a7002c92177fbc7a2864d7)
- VTD\_FSTS\_IQE : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a0bd762348a7e835404a69d07ef693d2f)
- VTD\_FSTS\_ITE : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ae011a04ef87b86d305d809871f00c5a2)
- VTD\_FSTS\_PFO : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#abb54fb534dd165ef2563621a35d5fe68)
- VTD\_FSTS\_PPF : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#acc0953f9a36d112b6ac08b80c8187c6e)
- VTD\_FSTS\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ab534801c80c852a0d44ba37fb99ff599)
- VTD\_GCMD\_CFI : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a77a7d681bf347e2f6e67a6fceac9d3ec)
- VTD\_GCMD\_EAFL : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a82458446fa979a8859cc47cebb033546)
- VTD\_GCMD\_IRE : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ae8a7488667327fb89be327270ff2c2d9)
- VTD\_GCMD\_QIE : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a5c81208be8e84b45e02ce632cdca49c4)
- VTD\_GCMD\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aa4f2595ff9d2403e65e99e0fa9c2a413)
- VTD\_GCMD\_SFL : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a693ad1ea084abc79792acf6e9624eb01)
- VTD\_GCMD\_SIRTP : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ab67d22a80805b503c01a18250f69d821)
- VTD\_GCMD\_SRTP : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ad8f7b89a1d8403ed67b2b6bea9040cba)
- VTD\_GCMD\_TE : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ad082231bc325e87ed9b958308287d2cb)
- VTD\_GCMD\_WBF : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ae9cbe740bb1766815c9abac27147d9a1)
- vtd\_get\_irte\_by\_irq() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a214bd683e7331adbe5afbca41e3a6bc9)
- vtd\_get\_irte\_by\_irq\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a0a2e483fe9159a46d6265b257841f43a)
- vtd\_get\_irte\_by\_vector() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a4645558c4f9e461e86e6d0caf96311ad)
- vtd\_get\_irte\_by\_vector\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a944bfa2dc643fd3ff182eee12d836ae5)
- vtd\_get\_irte\_vector() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a76d5a655a925c9ec9536e6c906c2192e)
- vtd\_get\_irte\_vector\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#af3ddf5e22fcb4956e4887e1982fae28e)
- VTD\_GSTS\_CFIS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a9c721d84291b7a850fc80014b22bb5bd)
- VTD\_GSTS\_EAFLS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a341a758419eb574369e3fc1004185f7b)
- VTD\_GSTS\_IRES : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a3c4280b1bdd1d08c8e74740c703e8c55)
- VTD\_GSTS\_QIES : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a860ae42ac0bd9c59486911c2a54b1d75)
- VTD\_GSTS\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a12de5a06af6f0dee1450b57d1c7c5da1)
- VTD\_GSTS\_SFLS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a2cc6fbc91569604ea72f06eb05cc38eb)
- VTD\_GSTS\_SIRTPS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aacaef26bfd1a0df3daac57b9b4c94c0e)
- VTD\_GSTS\_SRTPS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a1692e8cc99f47621eeed3e9d5d4e66de)
- VTD\_GSTS\_TES : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aa4c198fda51ee4734793c4d249ef066a)
- VTD\_GSTS\_WBFS : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#adc9c8b0b29a43676fb8929a385b60a5d)
- VTD\_ICS\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a47e7999170740251eaf070b343c3dac5)
- VTD\_IEADDR\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a92e5f0445108729ce275b0207c40e0fc)
- VTD\_IECTL\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a90c729a08238da52f5e71e9631eef7b2)
- VTD\_IEDATA\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#afd990ea46b0e0223cb6a4984b8f7980d)
- VTD\_IEUADDR\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a0730b889749f87482e72e464af24d1bd)
- VTD\_IQA\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#adc615cb42daa0b031fef3b13882a0656)
- VTD\_IQA\_REG\_GEN\_CONTENT : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#adf3d1fcc9595a50c2c18b99e54baa5a2)
- VTD\_IQA\_SIZE\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a9f0d0ed3d38ea6b1a23efc1406633d1a)
- VTD\_IQA\_WIDTH\_128\_BIT : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a84bb8ffc35c9b25030436a4a88c6a771)
- VTD\_IQA\_WIDTH\_256\_BIT : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a2d0d9080b2373b5b451d7ad3fa17b985)
- VTD\_IQERCD\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a6fd0940792b56a1842eca499eb3c3c49)
- VTD\_IQH\_QH\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a00a2efca0fe92402eda07c6c42dc32a2)
- VTD\_IQH\_QH\_POS\_128 : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a85be1fe969eaabd32736ef6c696267c8)
- VTD\_IQH\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#adeb16c650d63fbff28dddbee5e47eb35)
- VTD\_IQT\_QT\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a40c2fb7375465ff96c850d20b2d90211)
- VTD\_IQT\_QT\_POS\_128 : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#acfc1062dff0c14b3aaea99406bbbd105)
- VTD\_IQT\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a96c5df443c830b3f50cfd3b0cb1db62b)
- VTD\_IRTA\_EIME : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a3ae1b14d3b871dba8b4642ab7a860258)
- VTD\_IRTA\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a60f31f19a83d0a98f621edc243ef22d7)
- VTD\_IRTA\_REG\_GEN\_CONTENT : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ae3278bc139378fd2f757391abae700e0)
- VTD\_IRTA\_SIZE\_MASK : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a5846f2bd688b7c3f0aab2143c9a00bc6)
- vtd\_irte\_is\_msi() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a82018e41e5bbb12f98c16b0d416596fe)
- vtd\_irte\_is\_msi\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a622083e8841c3899ca7b7156f526581f)
- VTD\_MTRR\_FIX16K\_80000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a2db28ba3a8f12815153905f7be365001)
- VTD\_MTRR\_FIX16K\_A0000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ab8c127c60b25fb5e1ffb8e5524d288a7)
- VTD\_MTRR\_FIX4K\_C0000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a1f21f97fb1ffa22a8d62a904ee916829)
- VTD\_MTRR\_FIX4K\_C8000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#adf5e811fdd20d85dfa122102d103e8a7)
- VTD\_MTRR\_FIX4K\_D0000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#af75a654b06da6202f95404ebd80883c2)
- VTD\_MTRR\_FIX4K\_D8000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ac48bbb28dbeac1fef967bf6b5eb49ef7)
- VTD\_MTRR\_FIX4K\_E0000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a3bc83d6ecee674b0e82986c3a0fe02d2)
- VTD\_MTRR\_FIX4K\_E8000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a8c8f8255f6c96e88b87abb377829c477)
- VTD\_MTRR\_FIX4K\_F0000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a522d7d598548ab37db10a58dce092564)
- VTD\_MTRR\_FIX4K\_F8000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a093945fc17fe842c57e1cc15c7706be6)
- VTD\_MTRR\_FIX64K\_00000\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a301b5cbc77f4ea445843f467961dbe16)
- VTD\_MTRR\_PHYSBASE0\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aceed4692a0baebf43a05e7e47a677e7e)
- VTD\_MTRR\_PHYSBASE1\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ac373a978ad5718e70d64cb2edf83d3ff)
- VTD\_MTRR\_PHYSBASE2\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a7764fedc514505d866b6cf0ff02fcd77)
- VTD\_MTRR\_PHYSBASE3\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a60051c41689206174524d93568edb8fb)
- VTD\_MTRR\_PHYSBASE4\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a5b64dc4002cb91e17e9d59a5a5287931)
- VTD\_MTRR\_PHYSBASE5\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ada6c20bd514287289a4c9be89cf37c5e)
- VTD\_MTRR\_PHYSBASE6\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a2fa2b0adce4532b0e78e36067ddc92bc)
- VTD\_MTRR\_PHYSBASE7\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ab8c0090a6b877ab563dc47f6ceab6ffa)
- VTD\_MTRR\_PHYSBASE8\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a87cb38ce70856e3ed54e892981b162d8)
- VTD\_MTRR\_PHYSBASE9\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aa9c98b56442189b198853dc55f65ee99)
- VTD\_MTRR\_PHYSMASK0\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a3117c34473b1dda9370b6b2c0d2b3ae8)
- VTD\_MTRR\_PHYSMASK1\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a7bff89243d1fe1ee50c30fe35f8787b8)
- VTD\_MTRR\_PHYSMASK2\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a39d916ac79277d19e4de4d3304e05419)
- VTD\_MTRR\_PHYSMASK3\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a920934ca68d623a17e40349b96732710)
- VTD\_MTRR\_PHYSMASK4\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a0efb849ec6eb87f45449d652b50b35ac)
- VTD\_MTRR\_PHYSMASK5\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aeb38393a9b55a00b11fc57b96e337f1e)
- VTD\_MTRR\_PHYSMASK6\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a1cd4cec75797d2ab276e1bb4676ed35f)
- VTD\_MTRR\_PHYSMASK7\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a544d6f76bbc9cfe9e5e13dc88cc7efa7)
- VTD\_MTRR\_PHYSMASK8\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a7de7d6d45f3054aaaf3700597974a173)
- VTD\_MTRR\_PHYSMASK9\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a658f6bc2f2f6ad3bc3dec326a3f80322)
- VTD\_MTRRCAP\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a81bc1962172f5fb87367847d3aace31b)
- VTD\_MTRRDEF\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ae31f67f99552bf13fb1d1cff36f09d58)
- VTD\_PEADDR\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a78165cc7aa3d410bac0078697821a5e4)
- VTD\_PECTL\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a06eb10f7e372d0d4a4ac396efe89291f)
- VTD\_PEDATA\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ab1106f4b9646027441d7d33579ff7506)
- VTD\_PEUADDR\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aedb781050449eeb2803d9f897541b499)
- VTD\_PHMBASE\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a41e24e42a32a0724fcc5458dd270394e)
- VTD\_PHMLIMIT\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#af3ed4442c70f5cca2e42b16ac715bf1d)
- VTD\_PLMBASE\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a174f0c29d59bd0089bc255d908320496)
- VTD\_PLMLIMIT\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a0e91de46d5fcca3a4a6f9f4f415ae6af)
- VTD\_PMEN\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a5463ab7a69efad6a1ba3ede229f01944)
- VTD\_PQA\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#af0100bd5cff7c067d58a4b80b1333f7b)
- VTD\_PQH\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ad40e4766ad1511e796f6c1ff4a021f29)
- VTD\_PQT\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a58aad2e7fd4eda6c45772467405819b8)
- VTD\_PRS\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a502a5fd90a1e4761378c9b0722fb294e)
- vtd\_remap() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a3cc5ff5183e80aeb18115d8b5a541546)
- vtd\_remap\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#afefa59b2064053d90445127da9b64bfb)
- vtd\_remap\_msi() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#ab7b8ad9dbee740c9e97021853f1131fc)
- vtd\_remap\_msi\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#aadb69e257884026693109510e20dc2b4)
- VTD\_RTADDR\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a8a87a0cfe8d7befd0c3d5d8f0176feed)
- vtd\_set\_irte\_irq() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#ab067e306959a0774ee5e896eafab2132)
- vtd\_set\_irte\_irq\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a63733309814847ba4204776e8ace9a85)
- vtd\_set\_irte\_msi() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#ae81918a2c81e03cc4e02603781e8ca21)
- vtd\_set\_irte\_msi\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a0118f224100f721a508ce00c3ae99698)
- vtd\_set\_irte\_vector() : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a342e4745949ed1bd50b4d51de482be57)
- vtd\_set\_irte\_vector\_f : [intel\_vtd.h](drivers_2interrupt__controller_2intel__vtd_8h.md#a06190d6273d0adeb92e9e4e4fa79d9b4)
- VTD\_VCCAP\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#ae8419bde7f945e47b690fcd13c1b0459)
- VTD\_VCMD : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a314d1d69680701e467f1e4a0da918684)
- VTD\_VCRSP : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#a0394fb4097710d9b835d35c18f9cdd45)
- VTD\_VER\_REG : [intel\_vtd.h](arch_2x86_2intel__vtd_8h.md#aaf55b3a29bcc8b11050c017cbb7fd428)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
